tests/baselines/reference/YieldExpression1_es6.errors.txt
tests/cases/conformance/es6/yieldExpressions/YieldExpression1_es6.ts(1,1): error TS2552: Cannot find name 'yield'. Did you mean 'eval'?


==== tests/cases/conformance/es6/yieldExpressions/YieldExpression1_es6.ts (1 errors) ====
    yield;
    ~~~~~
!!! error TS2552: Cannot find name 'yield'. Did you mean 'eval'?